# cambium-api

./: .coveragerc  .flake8  .gitignore  Dockerfile  PROMPTS.md  README.md  cambium-postman.json  plano-implementacao.md  pyproject.toml  requirements.txt  transcript.md
.github/workflows/: cicd.yaml
app/: __init__.py
app/config/: settings.py
app/routes/: exchange.py  frankfurter.py
app/services/: frank_service.py  frankfurter.py
tests/: test_calculate_performance.py
