[project]
name = "cambium-api"
version = "0.1.0"
description = "Cambium API - Exchange Rate Performance Analysis"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.1.3",
    "requests==2.33.0",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-html==4.2.0",
    "black==26.3.1",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-html==4.2.0",
    "black==26.3.1",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==1.15.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(
    \.venv
  | __pycache__
  | \.git
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=app/services",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["app/services"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"